; ModuleID = '/home/carl/AnghaBench/FFmpeg/tests/extr_tiny_psnr.c_get_s16l.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tests/extr_tiny_psnr.c_get_s16l.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.anon = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @get_s16l to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_s16l(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %union.anon, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = getelementptr inbounds i32, i32* %4, i64 0
  %6 = load i32, i32* %5, align 4
  %7 = load i32*, i32** %2, align 8
  %8 = getelementptr inbounds i32, i32* %7, i64 1
  %9 = load i32, i32* %8, align 4
  %10 = shl i32 %9, 8
  %11 = or i32 %6, %10
  %12 = bitcast %union.anon* %3 to i32*
  store i32 %11, i32* %12, align 4
  %13 = bitcast %union.anon* %3 to i32*
  %14 = load i32, i32* %13, align 4
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
